Polygons are testable.
Wrote a polygon collision check that looks for corners inside
polygons. Created some disgusting hacky framework to actually
allow polygons into the game. Also, various other small changes
for various reasons.

Taken together, this means polygons can finally be tested.
Naturally, they don't work. I hardly tried, though. Now for
debugging.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 LFLAGS=-lSDL -lSDL_image -lSDL_gfx
 CFLAGS=$(LFLAGS)
-SRCS=test.cpp vector.cpp solid.cpp rect.cpp physics.cpp wall.cpp ball.cpp seg.cpp poly.cpp Moveable.cpp player.cpp test_utils.cpp
+SRCS=test.cpp vector.cpp solid.cpp rect.cpp physics.cpp wall.cpp ball.cpp seg.cpp poly.cpp polywall.cpp Moveable.cpp player.cpp test_utils.cpp
 OBJS=$(SRCS:.cpp=.o)
 HEADERS=$(SRCS:.cpp=.hpp)
 
