--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 LFLAGS=-lSDL -lSDL_image -lSDL_gfx
 CFLAGS=$(LFLAGS)
-SRCS=test.cpp vector.cpp solid.cpp physics.cpp ball.cpp seg.cpp poly.cpp Moveable.cpp player.cpp visible.cpp test_utils.cpp
+SRCS=test.cpp vector.cpp solid.cpp physics.cpp Moveable.cpp player.cpp visible.cpp test_utils.cpp
 OBJS=$(SRCS:.cpp=.o)
 HEADERS=$(SRCS:.cpp=.hpp)
 
