--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,15 @@
 CC=g++
-LFLAGS=-lSDL -lSDL_image -lSDL_gfx
+LFLAGS=-lSDL -lSDL_image -lSDL_gfx -lSDL_ttf
 CFLAGS=$(LFLAGS)
-SRCS=test.cpp vector.cpp solid.cpp physics.cpp Moveable.cpp player.cpp visible.cpp test_utils.cpp
+SRCS=level.cpp level_utils.cpp ui.cpp vector.cpp solid.cpp physics.cpp Moveable.cpp player.cpp visible.cpp test_utils.cpp
 OBJS=$(SRCS:.cpp=.o)
 HEADERS=$(SRCS:.cpp=.hpp)
 
-test: $(OBJS)
-	$(CC) -o test $(LFLAGS) $(OBJS)
+ninjaball: $(OBJS)
+	$(CC) -o ninjaball $(LFLAGS) ninjaball.cpp $(OBJS)
 
 .cpp.o: $(HEADERS)
 	$(CC) $(CFLAGS) $< -c
 
 clean:
-	rm *.o test
+	rm *.o ninjaball
