--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 LFLAGS=-lSDL -lSDL_image -lSDL_gfx -lSDL_ttf
 CFLAGS=$(LFLAGS)
-SRCS=level.cpp level_utils.cpp ui.cpp vector.cpp solid.cpp physics.cpp Moveable.cpp player.cpp visible.cpp test_utils.cpp
+SRCS=level.cpp level_utils.cpp ui.cpp vector.cpp solid.cpp physics.cpp Moveable.cpp player.cpp visible.cpp
 OBJS=$(SRCS:.cpp=.o)
 HEADERS=$(SRCS:.cpp=.hpp)
 
